# rhizo-trade

./: .gitignore  btc-trend.py  data.py  eth-garch.py  feature_analysis.py  features.py  index.sh  main.py  modal_xgboost_tsxval.py  naive-momentum.py  normalized_momo.py  options-sim.py  parallel_validate.py  preprocessing.py  pyproject.toml  refactor.py  schema.py  test.py  tree.py  validate.py  xgb_quantile.py  xgboost_tsxval.py  xgboost_tsxval_refactor.py
models/: predictions_20241228_010829.csv  predictions_20241228_011907.csv  predictions_20241228_012527.csv  predictions_20241228_013204.csv  predictions_20241228_013738.csv  predictions_20241228_014143.csv  predictions_20241228_014648.csv  predictions_20241228_180213.csv  xgboost_model_20241228_005958.json  xgboost_model_20241228_010829.json  xgboost_model_20241228_011907.json  xgboost_model_20241228_012527.json  xgboost_model_20241228_013204.json  xgboost_model_20241228_013738.json  xgboost_model_20241228_014143.json  xgboost_model_20241228_014648.json  xgboost_model_20241228_175722.json  xgboost_model_20241228_180044.json  xgboost_model_20241228_180213.json  xgboost_model_20241228_180912.json  xgboost_model_20241228_181425.json  xgboost_model_20241228_181545.json  xgboost_model_20241228_182539.json  xgboost_model_20241228_191104.json  xgboost_model_20241228_192126.json  xgboost_model_20241228_192739.json  xgboost_model_20241228_193019.json  xgboost_model_20241228_193640.json  xgboost_model_20241228_194135.json  xgboost_model_20241228_195440.json  xgboost_model_20241228_201443.json  xgboost_model_20241228_202011.json  (+56 more)
(+9 files in other folders)
