[project]
name = "console-boogaloo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.10",
    "aiolimiter>=1.2.1",
    "asyncio>=3.4.3",
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.6.0",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    "velodata>=1.5.5",
    "vectorbt>=0.26.2",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
    "statsmodels>=0.14.4",
    "textual>=1.0.0",
    "textual-plotext>=1.0.1",
    "altair>=5.5.0",
    "vl-convert-python>=1.7.0",
]
