[project]
name = "console-boogaloo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.10",
    "aiolimiter>=1.2.1",
    "asyncio>=3.4.3",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    "velodata>=1.5.5",
    "vectorbt>=0.26.2",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
    "statsmodels>=0.14.4",
    "altair>=5.5.0",
    "vl-convert-python>=1.7.0",
    "xgboost>=2.1.3",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "cupy-cuda12x>=13.3.0",
    "fredapi>=0.5.2",
    "modal>=0.70.3",
]
